[project]

name = "perspectives"
version = "1.0.8"
authors = [
  { name="Henry Leonardi", email="leonardi.henry@gmail.com" },
]
description = "Extracting directed emotions at scale with LMs"
readme = "README.md"


requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]


[options]
install_requires = ["setuptools", "transformers", "sentence-transformers", "pydot", "graphviz"]

[build-system]
requires = ["setuptools", "transformers", "sentence-transformers", "pydot", "graphviz"]
build-backend = 'setuptools.build_meta'

[project.urls]
"Homepage" = "https://github.com/helliun/perspectives"
"Bug Tracker" = "https://github.com/helliun/perspectives/issues"
